# search-agent

./: .env.TEMPLATE  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: deploy.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: entrypoint.sh  manage.py
api/app/core/: __init__.py  admin.py  auth_serializers.py  authentication.py  map_serializers.py  models.py  permissions.py  querysets.py  result_locations.py  serializers.py  services.py  social_auth.py  social_urls.py  tasks.py  test_auth.py  test_helpers.py  test_locations.py  test_topics.py  tests.py  views.py  viewsets.py
api/app/core/management/commands/: backfill_result_locations.py  db.py  initadmin.py  wait_for_db.py
api/app/core/migrations/: 0001_initial.py  0002_searchtopic_schedule.py  0003_sourcescope_use_all_engines.py  0004_sourcescope_use_all_categories.py  0005_user_owned_search_assets.py  0006_sourcescope_result_order.py  0007_searchresultlocation_and_more.py  0008_cloudflareaccessidentity.py  0009_sourcescope_languages.py  0010_searchresult_is_saved_saved_title.py  0011_savedfolder_searchresult_folder.py  0012_searchresult_nullable_topic_owner_bookmark.py  0013_pushsubscription.py
api/app/fsex/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
api/app/ml/: renderers.py  serializers.py  urls.py  views.py
api/app/ml/providers/: ollama.py  ollama_stream.py  prompts.py
docs/: Dockerfile  mkdocs.yml
docs/docs/: index.md
docs/docs/stylesheets/: extra.css
docs/docs/subpage/: index.md
kube/helm/monitoring/: values.yaml
kube/helm/search-agent/: Chart.yaml  values.yaml
kube/helm/search-agent/templates/: NOTES.txt  _helpers.tpl  api.yaml  celery.yaml  cloudflared.yaml  envoy.yaml  (+7 more)
ops/envoy/: envoy.yaml
ops/searxng/: settings.yml
ui/: .dockerignore  Dockerfile
ui/app/: .prettierignore  .prettierrc  README.md  dist  eslint.config.mjs  nuxt.config.ts  orval.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
ui/app/app/: app.vue
ui/app/public/: manifest.webmanifest  sw.js
ui/app/scripts/: watch-openapi.mjs
(+58 files in other folders)
