[project]
name = "fsex-api"
version = "0.1.0"
description = "Search Agent for configurable SearxNG discovery and Crawl4AI parsing"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.10",
    "django-redis>=6.0.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-cors-headers>=4.9.0",
    "django-guardian>=3.2.0",
    "django-filter>=25.2",
    "django-dbbackup>=5.1.2",
    "django-structlog>=10.0.0",
    "djangorestframework>=3.16.1",
    "dj-rest-auth>=7.0.2",
    "gunicorn>=23.0.0",
    "structlog>=25.5.0",
    "sqlparse>=0.5.5",
    "uvicorn>=0.40.0",
    "psycopg[binary]>=3.2.0",
    "rich>=14.2.0",
    "httpx>=0.28.1",
    "crawl4ai>=0.8.0",
    "celery[redis]>=5.6.0",
    "django-celery-beat>=2.8.0",
    "django-celery-results>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "django-stubs>=5.2.0",
    "djangorestframework-stubs>=3.16.0",
    "mypy>=1.19.0",
    "ruff>=0.14.11",
    "pytest-django>=4.11.1",
    "pytest-cov>=7.0.0",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.1.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "fsex"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "fsex.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "fsex.settings"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
